tdf#124232 PPTX export: fix interactions and hyperlinks on images

Follow-up to commit Idda1ff6fd3243b06262637c7c8e579e78309e317
"tdf#141704 PPTX import: fix hyperlinks on images"

Change-Id: If29241ea06253e503dae27f8dc762574a5a634de