oox/source/export/shapes.cxx
@@ -58,6 +58,10 @@
 #include <com/sun/star/chart2/XChartDocument.hpp>
 #include <com/sun/star/frame/XModel.hpp>
 #include <com/sun/star/uno/XComponentContext.hpp>
+#include <com/sun/star/drawing/XDrawPages.hpp>
+#include <com/sun/star/drawing/XDrawPagesSupplier.hpp>
+#include <com/sun/star/document/XEventsSupplier.hpp>
+#include <com/sun/star/presentation/ClickAction.hpp>
 #include <tools/globname.hxx>
 #include <comphelper/classids.hxx>
 #include <comphelper/propertysequence.hxx>
@@ -1147,6 +1151,32 @@ ShapeExport& ShapeExport::WriteGraphicObjectShape( const Reference< XShape >& xS
     return *this;
 }
 
+static OUString lcl_GetTarget(const css::uno::Reference<css::frame::XModel>& xModel,
+                              std::u16string_view rURL)
+{
+    Reference<drawing::XDrawPagesSupplier> xDPS(xModel, uno::UNO_QUERY_THROW);
+    Reference<drawing::XDrawPages> xDrawPages(xDPS->getDrawPages(), uno::UNO_SET_THROW);
+    sal_uInt32 nPageCount = xDrawPages->getCount();
+    OUString sTarget;
+
+    for (sal_uInt32 i = 0; i < nPageCount; ++i)
+    {
+        Reference<XDrawPage> xDrawPage;
+        xDrawPages->getByIndex(i) >>= xDrawPage;
+        Reference<container::XNamed> xNamed(xDrawPage, UNO_QUERY);
+        if (!xNamed)
+            continue;
+        OUString sSlideName = "#" + xNamed->getName();
+        if (rURL == sSlideName)
+        {
+            sTarget = "slide" + OUString::number(i + 1) + ".xml";
+            break;
+        }
+    }
+
+    return sTarget;
+}
+
 void ShapeExport::WriteGraphicObjectShapePart( const Reference< XShape >& xShape, const Graphic* pGraphic )
 {
     SAL_INFO("oox.shape", "write graphic object shape");
@@ -1208,19 +1238,64 @@ void ShapeExport::WriteGraphicObjectShapePart( const Reference< XShape >& xShape
                           XML_name,   GetShapeName(xShape),
                           XML_descr,  sax_fastparser::UseIf(sDescr, bHaveDesc));
 
-    // OOXTODO: //cNvPr children: XML_extLst, XML_hlinkHover
-    if (bHasMediaURL)
-        pFS->singleElementNS(XML_a, XML_hlinkClick,
-                             FSNS(XML_r, XML_id), "",
-                             XML_action, "ppaction://media");
-    if( !sURL.isEmpty() )
-    {
-        OUString sRelId = mpFB->addRelation( mpFS->getOutputStream(),
-                oox::getRelationship(Relationship::HYPERLINK),
-                mpURLTransformer->getTransformedString(sURL),
-                mpURLTransformer->isExternalURL(sURL));
+    uno::Reference<document::XEventsSupplier> xEventsSupplier(xShape, uno::UNO_QUERY);
+    uno::Reference<container::XNameAccess> xEvents = xEventsSupplier->getEvents();
+    uno::Sequence<beans::PropertyValue> aClickProperties;
+    xEvents->getByName("OnClick") >>= aClickProperties;
+    OUString sPPAction;
 
-        mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId);
+    if (aClickProperties.size())
+    {
+        presentation::ClickAction eClickAction;
+        xShapeProps->getPropertyValue("OnClick") >>= eClickAction;
+
+        switch (eClickAction)
+        {
+            case presentation::ClickAction_STOPPRESENTATION:
+                sPPAction = "ppaction://hlinkshowjump?jump=endshow";
+                break;
+            case presentation::ClickAction_NEXTPAGE:
+                sPPAction = "ppaction://hlinkshowjump?jump=nextslide";
+                break;
+            case presentation::ClickAction_LASTPAGE:
+                sPPAction = "ppaction://hlinkshowjump?jump=lastslide";
+                break;
+            case presentation::ClickAction_PREVPAGE:
+                sPPAction = "ppaction://hlinkshowjump?jump=previousslide";
+                break;
+            case presentation::ClickAction_FIRSTPAGE:
+                sPPAction = "ppaction://hlinkshowjump?jump=firstslide";
+                break;
+            case presentation::ClickAction_DOCUMENT:
+            case presentation::ClickAction_BOOKMARK:
+                xShapeProps->getPropertyValue("Bookmark") >>= sURL;
+                if (eClickAction == presentation::ClickAction_BOOKMARK)
+                    sURL = "#" + sURL;
+                break;
+            default:
+                break;
+        }
+    }
+
+    // OOXTODO: //cNvPr children: XML_extLst, XML_hlinkHover
+    if (bHasMediaURL || !sPPAction.isEmpty())
+        mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), "", XML_action,
+                              bHasMediaURL ? "ppaction://media" : sPPAction);
+    if (!sURL.isEmpty())
+    {
+        bool bExtURL = URLTransformer().isExternalURL(sURL);
+        sURL = bExtURL ? sURL : lcl_GetTarget(GetFB()->getModel(), sURL);
+
+        OUString sRelId = mpFB->addRelation(mpFS->getOutputStream(),
+                                            bExtURL ? oox::getRelationship(Relationship::HYPERLINK)
+                                                    : oox::getRelationship(Relationship::SLIDE),
+                                            sURL, bExtURL);
+
+        if (bExtURL)
+            mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId);
+        else
+            mpFS->singleElementNS(XML_a, XML_hlinkClick, FSNS(XML_r, XML_id), sRelId, XML_action,
+                                  "ppaction://hlinksldjump");
     }
     pFS->endElementNS(mnXmlNamespace, XML_cNvPr);
 
